--- a/v2.html
+++ b/v2.html
@@ -10,6 +10,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="config.js"></script>
+    <script>
+    // Sanitize config strings before page scripts use it
+    (function(){
+        try {
+            if (typeof config === 'undefined') return;
+            const seen = new WeakSet();
+            function sanitizeString(str){
+                return String(str)
+                    .replace(/\u0019/g, "\u2019")
+                    .replace(/[\u0000-\u0018\u001A-\u001F\u007F-\u009F]/g, "");
+            }
+            function sanitizeDeep(val){
+                if (typeof val === 'string') return sanitizeString(val);
+                if (val && typeof val === 'object'){
+                    if (seen.has(val)) return val;
+                    seen.add(val);
+                    if (Array.isArray(val)){
+                        for (let i=0;i<val.length;i++) val[i] = sanitizeDeep(val[i]);
+                    } else {
+                        for (const k in val){ if (Object.prototype.hasOwnProperty.call(val, k)) val[k] = sanitizeDeep(val[k]); }
+                    }
+                }
+                return val;
+            }
+            sanitizeDeep(config);
+        } catch(e) { /* no-op */ }
+    })();
+    </script>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -35,6 +63,7 @@
         /* Ensure gradient applies on prize name despite id color */
         #prizeName.title-gradient { color: transparent; }
         .section-subtitle { color: var(--muted); text-align: center; margin: 0 auto 12px; max-width: 720px; }
+        .highlight { color: var(--primary-2); font-weight: 800; }
 
         /* Premium section title treatment */
         .title-wrap { text-align: center; margin-bottom: 12px; position: relative; padding-top: clamp(60px, 8vw, 120px); }
@@ -646,7 +675,7 @@
                     const amt = config.prize.value || '';
                     valueBadge.innerHTML = `<span>${amt}</span>`;
                 }
-                setText('prizeDescription', config.prize.description);
+                setHTML('prizeDescription', config.prize.description);
                 const limited = document.getElementById('prizeLimitedOffer');
                 if (limited) limited.textContent = config.prize.limitedTimeOfferText || 'Limited';
 
@@ -814,7 +843,7 @@
 
         function hideGiveawayQuestionModal(){ if (questionModalOverlay) questionModalOverlay.classList.remove('visible'); }
         function showGiveawayQuestionModal(){ if (!questionModalOverlay || !config?.modalQuestions?.length) { const entry = document.getElementById('entry-form'); if (entry) entry.scrollIntoView({behavior:'smooth'}); return; } currentQuestionStepIndex = 0; collectedQuestionAnswers = {}; if (questionModalStepsContainer) questionModalStepsContainer.innerHTML = ''; questionModalOverlay.classList.add('visible'); displayGiveawayQuestionStep(currentQuestionStepIndex); }
-        async function submitFullEntry(){ const finalPayload = { fullName: storedFullName, email: storedEmail, phoneNumber: storedPhoneNumber, giveawayName: config.giveaway?.name || 'N/A', submittedAt: new Date().toISOString(), questions: [], deploymentInfo: config.deploymentInfo || {}, ghlWebhookUrl: config.settings?.ghlWebhookUrl || '', salesGeniusAppApi: config.settings?.salesGeniusAppApi || '', followUpBossEmail: config.settings?.followUpBossEmail || '', agentEmail: config.footerContact?.email || '' }; for (const qid in collectedQuestionAnswers) { const qObj = config.modalQuestions.find(q => q.id === qid); if (qObj) { const opt = qObj.options.find(o => o.value === collectedQuestionAnswers[qid]); finalPayload.questions.push({ question: qObj.questionText, answer: opt ? opt.text : collectedQuestionAnswers[qid] }); } } const webhookUrl = 'https://n8n.salesgenius.co/webhook/giveaway'; try { const res = await fetch(webhookUrl, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(finalPayload), mode:'cors' }); if (!res.ok) { alert('There was an issue submitting your entry. Please try again.'); } else { window.location.href = 'thankyou.html'; } } catch (e) { console.error(e); alert('An error occurred while submitting your entry. Please try again.'); } }
+        async function submitFullEntry(){ const finalPayload = { fullName: storedFullName, email: storedEmail, phoneNumber: storedPhoneNumber, giveawayName: config.giveaway?.name || 'N/A', submittedAt: new Date().toISOString(), questions: [], deploymentInfo: config.deploymentInfo || {}, ghlWebhookUrl: config.settings?.ghlWebhookUrl || '', salesGeniusAppApi: config.settings?.salesGeniusAppApi || '', followUpBossEmail: config.settings?.followUpBossEmail || '', agentEmail: config.footerContact?.email || '' }; for (const qid in collectedQuestionAnswers) { const qObj = config.modalQuestions.find(q => q.id === qid); if (qObj) { const opt = qObj.options.find(o => o.value === collectedQuestionAnswers[qid]); finalPayload.questions.push({ question: qObj.questionText, answer: opt ? opt.text : collectedQuestionAnswers[qid] }); } } const functionUrl = '/.netlify/functions/submit-entry'; try { const res = await fetch(functionUrl, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(finalPayload) }); if (!res.ok) { alert('There was an issue submitting your entry. Please try again.'); } else { window.location.href = 'thankyou.html'; } } catch (e) { console.error(e); alert('An error occurred while submitting your entry. Please try again.'); } }
         async function displayGiveawayQuestionStep(stepIndex){ if (!questionModalContent || !questionModalStepsContainer || !config) { console.error('Question modal structure missing'); hideGiveawayQuestionModal(); return; } questionModalStepsContainer.innerHTML = ''; if (stepIndex >= 0 && stepIndex < config.modalQuestions.length) { const q = config.modalQuestions[stepIndex]; const stepDiv = document.createElement('div'); stepDiv.classList.add('modal-step'); stepDiv.id = `giveaway-modal-step-${q.id}`; stepDiv.innerHTML = `<p class="question-text" id="giveawayModalStepTitle-${q.id}">${q.questionText}</p><div class="modal-options">${q.options.map(o => `<button type="button" class="modal-option-btn" data-step="${stepIndex}" data-question-id="${q.id}" data-answer="${o.value}">${o.text}</button>`).join('')}</div>`; stepDiv.querySelectorAll('.modal-option-btn').forEach(btn => btn.addEventListener('click', handleGiveawayAnswerClick)); questionModalStepsContainer.appendChild(stepDiv); setTimeout(() => stepDiv.classList.add('active'), 10); } else { if (questionModalStepsContainer) questionModalStepsContainer.innerHTML = '<p>Submitting your entry...</p>'; await submitFullEntry(); hideGiveawayQuestionModal(); } }
         function handleGiveawayAnswerClick(e){ try { const btn = e.currentTarget; const stepIndex = parseInt(btn.dataset.step, 10); const qid = btn.dataset.questionId; const ans = btn.dataset.answer; if (isNaN(stepIndex) || !qid || ans === undefined) return; collectedQuestionAnswers[qid] = ans; const current = btn.closest('.modal-options'); if (current) { current.querySelectorAll('.modal-option-btn').forEach(b => { b.classList.remove('selected'); b.disabled = true; }); btn.classList.add('selected'); } const activeStep = questionModalStepsContainer.querySelector('.modal-step.active'); if (activeStep) { activeStep.style.transition = 'opacity 0.3s ease-out'; activeStep.style.opacity = '0'; setTimeout(() => displayGiveawayQuestionStep(stepIndex + 1), 300); } else { setTimeout(() => displayGiveawayQuestionStep(stepIndex + 1), 300); } } catch(err){ console.error(err); hideGiveawayQuestionModal(); } }
         if (questionModalCloseBtn) questionModalCloseBtn.addEventListener('click', hideGiveawayQuestionModal);
