--- a/v2.html
+++ b/v2.html
@@ -829,7 +829,7 @@
         } catch(e){ console.error(e); }})();
 
         // Consent label
-        (function populateConsent(){ const consentLabel = document.getElementById('contactConsentLabel'); if (!consentLabel) return; const brokerageName = config.footerContact?.brokerageName || 'the brokerage'; const privacyPolicyLink = config.meta?.privacyPolicyLink || '#'; consentLabel.innerHTML = `I agree to be contacted by ${brokerageName} via call, email, and text. To opt-out, you can reply 'stop' at any time or click the unsubscribe link in the emails. Message and data rates may apply. <a href="${privacyPolicyLink}" target="_blank" style="color: var(--primary); text-decoration: underline;">Privacy Policy</a>.`; })();
+        (function populateConsent(){ const consentLabel = document.getElementById('contactConsentLabel'); if (!consentLabel) return; const brokerageName = config.footerContact?.brokerageName || 'the brokerage'; const privacyPolicyLink = config.meta?.privacyPolicyLink || '#'; consentLabel.innerHTML = `I agree to be contacted by Anthony & Chris- Hosted by Anthony Caputo/mortgage via call, email, and text. To opt-out, you can reply 'stop' at any time or click the unsubscribe link in the emails. Message and data rates may apply. <a href="${privacyPolicyLink}" target="_blank" style="color: var(--primary); text-decoration: underline;">Privacy Policy</a>.`; })();
 
         // Entry form copy
         (function populateEntryForm(){ try { if (!config.entryForm) return; setText('entryFormSubtitle', config.entryForm.subtitle); setText('entryFormCount', config.entryForm.entryCountText); const subBtnTxt = submitButton?.querySelector('.button-text'); if (subBtnTxt) subBtnTxt.textContent = 'Next'; } catch(e){ console.error(e);} })();
