--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@ function populateConsentText() {
     if (consentLabel && config) {
         const brokerageName = config.footerContact?.brokerageName || "the brokerage";
         const privacyPolicyLink = config.meta?.privacyPolicyLink || "#";
-        consentLabel.innerHTML = `I agree to be contacted by Anthony & Chris- Hosted by Anthony Caputo/mortgage via call, email, and text. To opt-out, you can reply ‘stop’ at any time or click the unsubscribe link in the emails. Message and data rates may apply. <a href="${privacyPolicyLink}" target="_blank" style="color: var(--primary-color-theme); text-decoration: underline;">Privacy Policy</a>.`;
+        consentLabel.innerHTML = `I agree to be contacted by Anthony Caputo & Christopher Defazio via call, email, and text. To opt-out, you can reply ‘stop’ at any time or click the unsubscribe link in the emails. Message and data rates may apply. <a href="${privacyPolicyLink}" target="_blank" style="color: var(--primary-color-theme); text-decoration: underline;">Privacy Policy</a>.`;
     }
 }
 
